支持首页显示图片

--- a/AndroidApp/app/src/main/res/values/dimens.xml
+++ b/AndroidApp/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="message_list_tool_height">30dp</dimen>
     <dimen name="message_item_content_size">16sp</dimen>
     <dimen name="message_item_image_icon_size">100dp</dimen>
+    <dimen name="message_item_image_size">100dp</dimen>
 </resources>
