--- a/AndroidApp/app/src/main/res/layout/message_item.xml
+++ b/AndroidApp/app/src/main/res/layout/message_item.xml
@@ -16,7 +16,7 @@
         <GridView
             android:id="@+id/message_list_content_images"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="wrap_content"
 
             android:numColumns="2"></GridView>
 
@@ -41,17 +41,27 @@
             android:background="@color/message_list_content_comment_bgc"
             android:gravity="center">
 
-            <ImageView
-                android:id="@+id/message_list_content_comment_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:id="@+id/message_list_content_comment_count_tv"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
-                android:textColor="@color/message_list_content_comment_count_color" />
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/message_list_content_comment_iv"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:padding="1dp"
+                    android:src="@drawable/comment" />
+
+                <TextView
+                    android:id="@+id/message_list_content_comment_count_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:text="0"
+                    android:textColor="@color/message_list_content_comment_count_color" />
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
