--- a/AndroidApp/app/src/main/res/values/styles.xml
+++ b/AndroidApp/app/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="@android:style/Theme.Holo">
-        <item name="android:background">#c7c2c2</item>
+    <style name="AppTheme" parent="@android:style/Theme.Holo.Light">
     </style>
 
 </resources>
