1. 解决图片显示问题 2. 本地数据和远程数据的同步

--- a/AndroidApp/app/src/main/res/values/dimens.xml
+++ b/AndroidApp/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="message_item_content_size">16sp</dimen>
     <dimen name="message_item_image_icon_size">100dp</dimen>
     <dimen name="message_item_image_size">100dp</dimen>
+    <dimen name="popup_menu_width">100dp</dimen>
+    <dimen name="popup_menu_height">100dp</dimen>
 </resources>
