--- a/AndroidApp/app/src/main/res/layout/image_detail_layout.xml
+++ b/AndroidApp/app/src/main/res/layout/image_detail_layout.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageSwitcher
+    <ViewFlipper
+        android:id="@+id/image_detail_vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/image_detail_vp"
         android:layout_gravity="center_horizontal" />
-</LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <LinearLayout
+            android:id="@+id/image_detail_layout"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"></LinearLayout>
+    </RelativeLayout>
+</RelativeLayout>
